# unesco_sites

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py  template.py
notebooks/: 01_eda.ipynb  02_modeling.ipynb
src/unesco_sites/: __init__.py  pipeline.py
src/unesco_sites/data/: loader.py
src/unesco_sites/models/: recommender.py  similarity.py
